--- a/_posts/2026-02-22-welcome.md
+++ b/_posts/2026-02-22-welcome.md
@@ -6,6 +6,7 @@ tags: [jekyll, chirpy, pertama]
 image:
   path: https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=1200
   alt: Responsive rendering of Chirpy theme.
+comments: true
 ---
 
 ## Selamat Datang!
